...
                        focusManager.clearFocus()
                        viewModel.attemptSave(homeViewModel.getColonyLocation())
                    },
                    icon = {
                        Icon(
                            painter = painterResource(R.drawable.ic_save),
                            contentDescription = "Save Seal",
                            modifier = Modifier.size(36.dp),
                            tint = if (!uiState.isSaveEnabled || uiState.entryNeedsConfirmation) MaterialTheme.colorScheme.surface else MaterialTheme.colorScheme.onSecondary,
                        )
                    },
                    text = {
                        Text(
...
